# PshatGPT

./: .gitignore  README.md  pyproject.toml
docs/: app.js  index.html  style.css
gemara/: fetcher.py  llm.py  meforshim.py  models.py  pdf_viewer.py  shas.py  web.py
gemara/agents/: base.py  comprehension.py  explainer.py
scripts/: fetch_nesikha.py
static/: app.js  index.html  style.css
worker/: wrangler.toml
worker/src/: index.js
