[project]
name = "pshatgpt"
version = "0.1.0"
description = "AI-assisted tzuras hadaf — click any line or mefaresh, get a contextual explanation"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.0",
    "httpx>=0.27",
    "fastapi>=0.115",
    "uvicorn>=0.30",
]
